--- a/apriltags2_node/package.xml
+++ b/apriltags2_node/package.xml
@@ -65,7 +65,11 @@
  
   <depend>geometry_msgs</depend>
   <depend>moveit_ros_planning_interface</depend>
-  
+  <depend>ur5_demo_descartes</depend>
+  <depend>descartes_trajectory</depend>
+  <depend>descartes_planner</depend>
+  <depend>descartes_utilities</depend>
+  <depend>trajectory_msgs</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
